third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-stable/diagnostic-not-implemented-from-zeros.stderr
error[E0277]: the trait bound `NotZerocopy: FromZeros` is not satisfied
  --> tests/ui-stable/diagnostic-not-implemented-from-zeros.rs:18:24
   |
18 |     takes_from_zeros::<NotZerocopy>();
   |                        ^^^^^^^^^^^ the trait `FromZeros` is not implemented for `NotZerocopy`
   |
   = note: Consider adding `#[derive(FromZeros)]` to `NotZerocopy`
   = help: the following other types implement trait `FromZeros`:
             ()
             *const T
             *mut T
             AU16
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
           and $N others
note: required by a bound in `takes_from_zeros`
  --> tests/ui-stable/diagnostic-not-implemented-from-zeros.rs:21:24
   |
21 | fn takes_from_zeros<T: FromZeros>() {}
   |                        ^^^^^^^^^ required by this bound in `takes_from_zeros`
